tests/baselines/reference/parserES5ForOfStatement1.d.errors.txt
parserES5ForOfStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
parserES5ForOfStatement1.d.ts(1,15): error TS2304: Cannot find name 'e'.


==== parserES5ForOfStatement1.d.ts (2 errors) ====
    for (var i of e) {
    ~~~
!!! error TS1036: Statements are not allowed in ambient contexts.
                  ~
!!! error TS2304: Cannot find name 'e'.
    }